# mcmods

./: .gitignore  .gitmodules  .stow-local-ignore  Brewfile  Cargo.toml  README.md  llm.md  makefile  mcmod.yaml  readme.md
.config/aerospace/: aerospace.toml
.github/workflows/: ci.yml  release.yml
assets/: README.md
assets/configs/etc/: zshenv
dot-config/bat/: themes
dot-config/borders/: bordersrc
dot-config/btop/: btop.conf  themes
dot-config/ghostty/: config
dot-config/karabiner/: karabiner.json  rules.ts
dot-config/linearmouse/: linearmouse.json
dot-config/nvim/: lazy-lock.json
dot-config/sketchybar/: sketchybarrc
dot-config/sketchybar/backup/items/: apple_music.sh
dot-config/sketchybar/backup/plugins/: apple_music.sh
dot-config/sketchybar/items/: activity.sh  battery.sh  brew.sh  spaces.sh  wifi.sh
dot-config/sketchybar/plugins/: activity.sh  battery.sh  brew.sh  space.sh  tailscale.sh  wifi.sh  wifit.sh
dot-config/zsh/: .zshalias  .zshenv  .zshrc
dot-config/zsh/assets/custom/: README.md
dot-config/zsh/completions/: _bat  _brew  _codex  _deno  _eza  _fastfetch  _fd  _gh  _git-lfs  _immich-go  _podman  _ponysay  _ponysay-tool  _ponythink  _starship  _tailscale  _temporal  _uv  _uvx  _yt-dlp  _zoxide
nix/hosts/: MacbookPro.nix
nix/modules/darwin/: default.nix  homebrew.nix  system.nix
nix/modules/home/: dotfiles.nix
src/: cli.rs  main.rs  modrinth.rs
