[package]
name = "mcmod"
version = "0.1.3"
edition = "2024"
description = "Declarative Minecraft mod manager"
license = "Apache-2.0"
repository = "https://github.com/kushvinth/mcmod"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha1 = "0.10"
sha2 = "0.10"
walkdir = "2"
zip = "2"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
tempfile = "3"
